2003-05-28	ujwal

    * Removed duplicate preferences from main preference panel.
    
    * Added UI for Peter Lewis's mac navigation patch.


2003-05-26	ujwal
    
    * Incorporated Peter Lewis' Mac navigation keys code patch.
    
    * Localized "Default Session" string in addressbook.

2003-05-25	ujwal

    * Refactored some AddressBook code.

2003-05-22	ujwal

    * Moved "Remap Delete Key" preference to addressbook session.

2003-05-19	ujwal

    * Consolidation of preferences into "Default Session" of 
      addressbook. New look for addressbook.
      
    * Restructured addressbook GUI.

2003-05-18	ujwal

    * Added a submenu under the tools menu to choose between sessions 
      with keyboard shortcuts.

2003-05-17	ujwal

    * Made PseudoTerminal a true NSWindowController class.

    * Removed all references to WINDOW.
    
    * Saving all nibs in both pre and post-10.2 format.

2003-05-16	ujwal

    * Fixed a crash when closing a window with both "close session 
      when it ends" and "Prompt on closing" are unselected.
      
    * When a window is created, it grabs the first available position 
      for the frame name.

2003-05-15	ujwal

    * making sure we have a ~/Library/Application Support/iTerm 
      directory on startup.

2003-05-14	fabian
    * Fixed a japanese keyboard input problem. Cleaned up the
      keyDown code in PTYSession.
      
2003-05-13	ujwal

    * Fixed a pretty big memory leak where the text views were not 
      being released and freed.
      
    * Implemented "Find" functionality to search through the text 
      view.

    * Implemented "Print Selection..." to print selected text. 
      Currently works only on rectangular selections.

2003-05-12	ujwal

    * Moved AddressBook file to new location under 
      ~/Library/Application Support/iTerm.
      
    * On startup, iTerm.app now looks for an "AutoLaunch.scpt"
      script under ~/Library/Application Support/iTerm. If it 