@@ -1,3 +1,7 @@
+2003-05-29	ujwal
+
+    * Fixed bug where PseduoTerminal's delegate was not being set.
+
 2003-05-28	ujwal
 
     * Removed duplicate preferences from main preference panel.
